[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/title logo pixelized.png.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/alagard_font/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Audio/Menu/Story Music/inspiring-cinematic-ambient-116199.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
rect_pivot_offset = Vector2( -311, -69 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 604.0
color = Color( 0.760784, 0.764706, 0.741176, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 300.0
margin_right = 700.0
margin_bottom = 436.0
script = ExtResource( 1 )

[node name="main music" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 4 )
autoplay = true

[node name="Start over" type="Button" parent="Menu"]
margin_right = 380.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start Over"

[node name="Main Menu" type="Button" parent="Menu"]
margin_top = 70.0
margin_right = 380.0
margin_bottom = 136.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="Quit" type="Button" parent="Menu"]
margin_top = 140.0
margin_right = 380.0
margin_bottom = 206.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 320.0
margin_top = 80.0
margin_right = 368.0
margin_bottom = 128.0
rect_scale = Vector2( 8, 8 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 144.0
margin_right = 860.0
margin_bottom = 238.0
custom_colors/font_color = Color( 1, 0.282353, 0.388235, 1 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER!"
align = 1

[connection signal="pressed" from="Menu/Start over" to="Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Main Menu" to="Menu" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
