[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/title logo pixelized.png.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/alagard_font/alagard.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 604.0
color = Color( 0.682353, 0.737255, 0.47451, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 412.0
margin_top = 150.0
margin_right = 100.0
margin_bottom = 250.0
script = ExtResource( 1 )

[node name="Start" type="Button" parent="Menu"]
margin_right = 200.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 0.941176, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="Tutorial" type="Button" parent="Menu"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 76.0
custom_colors/font_color = Color( 1, 0.941176, 0.611765, 1 )
custom_fonts/font = SubResource( 2 )
text = "TUTORIAL"

[node name="Quit" type="Button" parent="Menu"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 116.0
custom_colors/font_color = Color( 1, 0.941176, 0.611765, 1 )
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 320.0
margin_top = 80.0
margin_right = 368.0
margin_bottom = 128.0
rect_scale = Vector2( 8, 8 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 184.0
margin_top = 72.0
margin_right = 884.0
margin_bottom = 312.0
custom_colors/font_color = Color( 1, 0.941176, 0.611765, 1 )
custom_fonts/font = SubResource( 4 )
text = "ESCAPE OF THE WIZARD"
align = 1

[connection signal="pressed" from="Menu/Start" to="Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Tutorial" to="Menu" method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
