[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]

[node name="Options" type="CanvasLayer"]

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -46.0
margin_right = 30.0
margin_bottom = 46.0
script = ExtResource( 1 )

[node name="Quit" type="Button" parent="Menu"]
margin_right = 64.0
margin_bottom = 20.0
text = "Quit"

[node name="Resume" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Resume"

[node name="Menu" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 68.0
text = "Menu"

[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/Resume" to="Menu" method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/Menu" to="Menu" method="_on_Menu_pressed"]
